doc/pjdfstest/tests/errors/enotdir/sidebar-items.js
window.SIDEBAR_ITEMS = {"macro":["enotdir_comp_either_test_case","enotdir_comp_test_case"]};